<?xml version="1.0" encoding="utf-8"?>

<!--
    Sigh up Form
    The purpose is to collect information coupled with kotlin to upload to a sqllite database
-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
    android:background="@color/trans_black"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_create"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textSize="24sp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_firstname"
            android:hint="@string/firstname"
            android:textSize="22sp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lastname"
            android:id="@+id/et_lastname"
            android:textSize="22sp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/gender"
            android:id="@+id/et_gender"
            android:textSize="22sp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_schoolid"
            android:hint="@string/schoolid"
            android:textSize="22sp"/>
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:entries="@array/school_year"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:id="@+id/et_email"
            android:textSize="22sp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone"
            android:id="@+id/et_phone"
            android:textSize="22sp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_username"
            android:hint="@string/username"
            android:textSize="22sp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:id="@+id/et_password"
            android:textSize="22sp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/repassword"
            android:id="@+id/et_repassword"
            android:textSize="22sp"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_create"
            android:text="@string/create"/>


    </LinearLayout>
