<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    app:layout_constraintTop_toTopOf="parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/slider_example"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_points"
        android:textSize="22sp"
        android:text="Points"/>


    <LinearLayout
        android:layout_marginStart="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp"
        android:paddingStart="0dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:gravity="center"
            android:id="@+id/btn_home"
            android:layout_gravity="center_horizontal"
            android:text="@string/home"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:id="@+id/btn_event"
            android:layout_gravity="center_horizontal"
            android:text="@string/event"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:id="@+id/btn_qr"
            android:layout_gravity="center_horizontal"
            android:text="@string/qr"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:id="@+id/setting"
            android:layout_gravity="center_horizontal"
            android:text="@string/setting"/>



    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>