<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="8dp">




    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="BETA"
        android:textStyle="bold"
        tools:ignore="MissingConstraints" />
    <Button
        android:id="@+id/btn_login"
        android:layout_width="191dp"
        android:layout_height="76dp"
        android:text="Login"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />
    <TextView
        android:layout_width="wrap_content"
        android:id="@+id/txt_or"
        android:layout_height="wrap_content"
        android:text="@string/hint_1"
        app:layout_constraintTop_toBottomOf="@+id/btn_login"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />
    <Button
        android:layout_width="191dp"
        android:layout_height="55dp"

        android:text="@string/btn_create"
        app:layout_constraintTop_toBottomOf="@+id/txt_or"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />
    <EditText
        android:id="@+id/username"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/id_school"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/password"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/id_password"
        android:minHeight="48dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username" />



</androidx.constraintlayout.widget.ConstraintLayout>